# camera

./: README.md
firmware/: .gitignore  Cargo.toml
firmware/crates/core/: Cargo.toml
firmware/crates/core/src/: errors.rs  lib.rs
firmware/crates/core/src/configuration/: mod.rs
firmware/crates/core/src/configuration/customization/: mod.rs
firmware/crates/core/src/configuration/peripherals/: camera.rs  mod.rs
firmware/crates/core/src/features/: mod.rs  storage.rs
firmware/crates/core/src/features/http_server/: data.rs  mod.rs
firmware/crates/core/src/features/trigger/: enable_on.rs  mod.rs
firmware/crates/esp32-cam/: Cargo.toml  build.rs  sdkconfig.defaults
firmware/crates/esp32-cam/.cargo/: config.toml
firmware/crates/esp32-cam/src/: main.rs  time_source.rs
firmware/crates/esp32-cam/src/configuration/: customization.rs  mod.rs  peripherals.rs
firmware/crates/esp32-cam/src/esp32_camera/: frame_buffer.rs  mod.rs  sensor.rs  settings.rs
