[package]
name = "firmware-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
embedded-svc = "0.27"
log = { version = "0.4.17", default-features = false }
strum = { version = "0.25", features = ["derive"] }
