[package]
name = "esp32-cam"
version = "0.1.0"
authors = ["AngeloCipriani <angelo13cipriani.03@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.72"
description = "ESP32-CAM specific code for the camera's firmware"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "esp32-camera"
bindings_header = "bindings.h"
bindings_module = "camera"
