[package]
name = "esp32-cam"
version = "0.1.0"
authors = ["AngeloCipriani <angelo13cipriani.03@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.72"
description = "ESP32-CAM specific code for the camera's firmware"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-hal = "0.43"
esp-idf-sys = "0.34"
esp-idf-svc = { git = "https://github.com/Angelo13C/esp-idf-svc.git", branch = "expose_ctrl_port" }

enumset = "1.1"

embedded-svc = "0.27"

firmware-core = { path = "../core" }

a13c-embedded = { path = "https://github.com/Angelo13C/a13c-embedded.git", features = ["embedded-svc", "std", "hardware-esp32"] }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "esp32-camera"
bindings_header = "bindings.h"
bindings_module = "camera"
